<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/loadGame"
        android:layout_width="249dp"
        android:layout_height="63dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="150dp"
        android:text="LOAD GAME"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinButton" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="226dp"
        android:layout_height="60dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="155dp"
        android:text="JOIN GAME"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/loadGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hostButton" />

    <Button
        android:id="@+id/hostButton"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="155dp"
        android:text="HOST GAME"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="201dp"
        android:text="SCHACH"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/hostButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="247dp"
        android:layout_height="69dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start_game"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadGame"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>