<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/joinDynamicIDEnter"
        android:layout_width="343dp"
        android:layout_height="88dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/joinDynamicIDButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinNotification" />

    <Button
        android:id="@+id/joinDynamicIDButton"
        android:layout_width="172dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="125dp"
        android:text="@string/enter_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinDynamicIDEnter" />

    <TextView
        android:id="@+id/joinNotification"
        android:layout_width="337dp"
        android:layout_height="99dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="50dp"
        android:text="@string/join_notify"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/joinDynamicIDEnter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="222dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/joinDynamicIDEnter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinNotification"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/returnFromJoin"
        android:layout_width="106dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="26dp"
        android:text="@string/return_to_main"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinDynamicIDButton" />
</androidx.constraintlayout.widget.ConstraintLayout>